@@ -42,6 +42,8 @@ Post v24.03.0
     true, the traffic destined to a logical port of a provider logical switch
     (having a localnet port) will be tunnelled instead of sending it via the
     localnet port.
+  - Added support to define boundaries (min and max values) for selected ct
+    zones.
 
 OVN v24.03.0 - 01 Mar 2024
 --------------------------
